# aurae

./: Cargo.toml  Makefile  buf.gen.yaml  rust-toolchain.toml
.github/workflows/: 001-tester-ubuntu-make-test-auraed.yml  002-tester-ubuntu-make-test-auraescript.yml  003-tester-ubuntu-make-test-aer.yml
auraed/: Cargo.toml
auraed/src/cells/cell_service/: validation.rs
auraed/src/cells/cell_service/cells/nested_auraed/: nested_auraed.rs
auraed/src/cells/cell_service/executables/: executable.rs  mod.rs
auraed/src/ebpf/: perf_buffer_reader.rs
auraed/src/observe/: observe_service.rs
auraed/src/vms/: virtual_machine.rs
auraescript/: Cargo.toml
auraescript/macros/src/: ops.rs
auraescript/src/: lib.rs
auraescript/src/builtin/: auraescript_client.rs
client/: Cargo.toml
client/src/: client.rs
ebpf/: Makefile  README.md
ebpf/src/: probe-kprobe-taskstats-exit.rs  probe-tracepoint-sched-sched-process-fork.rs  probe-tracepoint-signal-signal-generate.rs
hack/: install-build-deps.sh
proto/: Cargo.toml
proto/src/: lib.rs
