# ---------------------------------------------------------------------------- #
#                |   █████╗ ██╗   ██╗██████╗  █████╗ ███████╗ |                #
#                |  ██╔══██╗██║   ██║██╔══██╗██╔══██╗██╔════╝ |                #
#                |  ███████║██║   ██║██████╔╝███████║█████╗   |                #
#                |  ██╔══██║██║   ██║██╔══██╗██╔══██║██╔══╝   |                #
#                |  ██║  ██║╚██████╔╝██║  ██║██║  ██║███████╗ |                #
#                |  ╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚══════╝ |                #
#                +--------------------------------------------+                #
#                                                                              #
#                         Distributed Systems Runtime                          #
# ---------------------------------------------------------------------------- #
# Copyright 2022 - 2024, the aurae contributors                                #
# SPDX-License-Identifier: Apache-2.0                                          #
# ---------------------------------------------------------------------------- #
[package]
name = "client"
version = "0.0.0"
edition = "2021"
authors = ["The Aurae Authors", "Kris Nóva <kris@nivenly.com>"]
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
macros = { package = "client-macros", path = "macros" }
proto = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt-multi-thread"] }
hyper-util = { version = "0.1.10"  }
toml = "0.8.19"
tonic = { workspace = true, features = ["tls"] }
tower = { features = ["util"], version = "0.5.2" }
x509-certificate = "0.24.0"
